# PianoConnect

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  pianoconnect.conf.template
include/: midi.h  networking.h  pianoconnect.h  protocol.h  timer.h
src/: RtMidi.cpp  app_pianoconnect.cpp  midi.cpp  midi_test.cpp  networking.cpp  networking_test.cpp  pianoconnect.cpp  timer.cpp
